--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,10 +10,11 @@ keywords = [
 license = "Apache 2.0"
 
 [tool.poetry.dependencies]
-python = "<3.11,>=3.7.1"
+python = "<3.11,>=3.8"
 requests = "^2.25.1"
 singer-sdk = { version="^0.14.0"}
 fs-s3fs = { version = "^1.1.1", optional = true}
+zeep = "^4.2.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
@@ -28,6 +29,10 @@ isort = "^5.10.1"
 [tool.poetry.extras]
 s3 = ["fs-s3fs"]
 
+[tool.poetry.group.dev.dependencies]
+ipykernel = "^6.17.1"
+genson = "^1.2.2"
+
 [tool.isort]
 profile = "black"
 multi_line_output = 3 # Vertical Hanging Indent
@@ -39,4 +44,4 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
 # CLI declaration
-tap-tradera = 'tap_tradera.tap:Taptradera.cli'
+tap-tradera = 'tap_tradera.tap:TapTradera.cli'
